# interview-ready

./: .gitignore  chengxing-pudao.txt
a-2025-job/i_youlify/fastapi-sa-async/: .env.example  alembic.ini  docker-compose.yml  pyproject.toml  readme.md
a-2025-job/i_youlify/fastapi-sa-async/alembic/: env.py
a-2025-job/i_youlify/fastapi-sa-async/alembic/versions/: 20250812_0001_create_user.py
a-2025-job/i_youlify/fastapi-sa-async/app/: main.py
a-2025-job/i_youlify/fastapi-sa-async/app/api/: deps.py
a-2025-job/i_youlify/fastapi-sa-async/app/api/v1/endpoints/: users.py
a-2025-job/i_youlify/fastapi-sa-async/app/core/: config.py
a-2025-job/i_youlify/fastapi-sa-async/app/crud/: base.py  crud_user.py
a-2025-job/i_youlify/fastapi-sa-async/app/db/: session.py
a-2025-job/i_youlify/fastapi-sa-async/app/models/: user.py
a-2025-job/i_youlify/fastapi-sa-async/app/schemas/: user.py
a-2025-job/i_youlify/fastapi-sa-async/app/tenancy/: middleware.py  utils.py
a-2025-job/i_youlify/fastapi-sa-async/tests/: test_users.py
dd/: bairong.py  bairong_encrypt.py  bairong_tigong.py
esscript/: elasticsearch-componentlog-init2.sh  elasticsearch-entryinvokeresult-init.sh  elasticsearch-entrysearch.sh  elasticsearch-init-freyr.sh  es_init_componentlog_script.py  es_init_entryinvokeresult_script.py  es_init_entrysearch_script.py  es_init_freyr_script52.py  es_velocity_script.py
flask-grpc-demo/: calculator.proto  calculator_pb2.py  calculator_pb2_grpc.py  calculator_server.py  flask_app.py  readme.txt
flask-loguru/: app.py
flask-loguru-2/: app.py
flink-do/: misc.sql  (+3 more)
(+230 files in other folders)
