[project]
name = "fastapi-sa-async-mt"
version = "0.1.0"
description = "FastAPI + SQLAlchemy Async + Alembic + Multi-tenant (schema per tenant)"
authors = [{name="you", email="you@example.com"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = "^0.114.0"
udicorn = {extras=["standard"], version="^0.30.0"}
SQLAlchemy = "^2.0.31"
asyncpg = "^0.29.0"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
psycopg = {version = "^3.2.1", extras=["binary"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.2"
pytest-asyncio = "^0.23.8"
alembic = "^1.13.2"

[tool.pytest.ini_options]
asyncio_mode = "auto"